--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,10 @@
-controllers:
-    resource: ../src/Controller/
-    type: annotation
-
-kernel:
-    resource: ../src/Kernel.php
-    type: annotation
+#controllers:
+#    resource: ../src/Controller/
+#    type: annotation
+#
+#kernel:
+#    resource: ../src/Kernel.php
+#    type: annotation
+index:
+    path: /
+    controller: App\Controller\QuestionController::homepage
