--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,6 +5,6 @@
 #kernel:
 #    resource: ../src/Kernel.php
 #    type: annotation
-index:
-    path: /
-    controller: App\Controller\QuestionController::homepage
+#index:
+#    path: /
+#    controller: App\Controller\QuestionController::homepage
